@@ -1834,6 +1834,8 @@ ARGS are the arguments OPERATION has been called with."
 		  'file-newer-than-file-p 'make-symbolic-link 'rename-file
 		  ;; Emacs 23+ only.
 		  'copy-directory
+		  ;; Emacs 24+ only.
+		  'files-equal-p 'file-subdir-of-p
 		  ;; XEmacs only.
 		  'dired-make-relative-symlink
 		  'vm-imap-move-mail 'vm-pop-move-mail 'vm-spool-move-mail))
