@@ -1,3 +1,12 @@
+2012-02-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name-for-operation): Add `files-equal-p'
+	and `file-subdir-of-p'.
+
+	* tramp-sh.el (tramp-sh-handle-copy-directory):
+	* tramp-smb.el (tramp-smb-handle-copy-directory): Add
+	COPY-CONTENTS argument.
+
 2012-02-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-error-with-buffer): Suppress buffer view, if
